Feat: Move some variables to .env

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,14 @@
-JWT_SECRET_KEY=67cvHS08AEfX3XNjS7jCsBNggQZO71zYTA6PP1E64MI
-JWT_REFRESH_SECRET_KEY=3xQJwOLtWNbHhkcAjk2bpIb+ET0nM2VHrf3fdRx6aPE
+# Port
+PORT=3030
+
+# Jwt
+JWT_SECRET_KEY=YOUR_SECRET_KEY
+JWT_REFRESH_SECRET_KEY=YOUR_REFRESH_SECRET_KEY
+
+# Database Url
+DATABASE_URL=mongodb://localhost/database_name
+
+# s3
+S3_BUCKET_NAME=YOUR_BUCKET_NAME
+S3_BUCKET_ACCESS_KEY=YOUR_S3_BUCKET_ACCESS_KEY
+S3_BUCKET_SECRET_ACCESS_KEY=YOUR_S3_BUCKET_SECRET_ACCESS_KEY
