Feat: Add docker

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@ DATABASE_URL=mongodb://localhost/database_name
 S3_BUCKET_NAME=YOUR_BUCKET_NAME
 S3_BUCKET_ACCESS_KEY=YOUR_S3_BUCKET_ACCESS_KEY
 S3_BUCKET_SECRET_ACCESS_KEY=YOUR_S3_BUCKET_SECRET_ACCESS_KEY
+S3_BUCKET_REGION=YOUR_BUCKET_REGION
+S3_BUCKET_FOLDER=YOUR_S3_BUCKET_FOLDER
