--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "db:on": "docker compose -f docker-compose.db.yaml up -d",
+    "db:off": "docker compose -f docker-compose.db.yaml down",
+    "db:clear": "docker compose -f docker-compose.db.yaml down --volumes",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -17,24 +20,27 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "docker:start": "docker compose up -d",
+    "docker:stop": "docker compose down",
+    "docker:clear": "docker compose down --volumes"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
     "@keyv/redis": "^4.2.0",
     "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
-    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "cache-manager": "^6.4.0",
     "cacheable": "^1.8.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -46,7 +52,6 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
