--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cacheable": "^1.8.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "ioredis": "^5.6.1",
     "mongoose": "^8.3.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
