FEAT: Add payment module (stripe, vnpay), mongo uri,

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,1 +1,18 @@
 node_modules
+dist
+.env
+.git
+.gitignore
+.vscode
+docker-compose.yml
+Dockerfile
+README.md
+LICENSE
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+.DS_Store
+Thumbs.db
