--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,12 @@ JWT_SECRET_KEY=YOUR_SECRET_KEY
 JWT_REFRESH_SECRET_KEY=YOUR_REFRESH_SECRET_KEY
 
 # Database Url
-DATABASE_URL=mongodb://localhost/database_name
+MONGO_DB_USERNAME=YOUR_MONGO_DB_USERNAME
+MONGO_DB_PASSWORD=YOUR_MONGO_DB_PASSWORD
+MONGO_DB_HOST=YOUR_MONGO_DB_HOST
+MONGO_DB_PORT=YOUR_MONGO_DB_PORT
+MONGO_DB_NAME=YOUR_MONGO_DB_NAME
+
 
 # s3
 S3_BUCKET_NAME=YOUR_BUCKET_NAME
@@ -14,3 +19,15 @@ S3_BUCKET_ACCESS_KEY=YOUR_S3_BUCKET_ACCESS_KEY
 S3_BUCKET_SECRET_ACCESS_KEY=YOUR_S3_BUCKET_SECRET_ACCESS_KEY
 S3_BUCKET_REGION=YOUR_BUCKET_REGION
 S3_BUCKET_FOLDER=YOUR_S3_BUCKET_FOLDER
+
+# payment
+STRIPE_SECRET_KEY=YOUR_STRIPE_SECRET_KEY
+STRIPE_WEBHOOK_SECRET=YOUR_STRIPE_WEBHOOK_SECRET
+STRIPE_PAYMENT_SUCCESS_URL=YOUR_STRIPE_PAYMENT_SUCCESS_URL
+STRIPE_PAYMENT_CANCEL_URL=YOUR_STRIPE_PAYMENT_CANCEL_URL
+
+#VNPAY
+VNP_TMNCODE=#
+VNP_HASH_SECRET=#
+VNP_URL=#
+VNP_RETURN_URL=#
