--- a/package.json
+++ b/package.json
@@ -41,10 +41,14 @@
     "cacheable": "^1.8.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "crypto": "^1.0.1",
+    "dayjs": "^1.11.13",
     "ioredis": "^5.6.1",
     "mongoose": "^8.3.3",
+    "qs": "^6.14.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "stripe": "^18.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
