--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^10.0.6",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^11.1.3",
     "@nestjs/swagger": "^7.3.1",
+    "@nestjs/websockets": "^11.1.3",
     "bcrypt": "^5.1.1",
     "cache-manager": "^6.4.0",
     "cacheable": "^1.8.8",
@@ -45,6 +48,8 @@
     "dayjs": "^1.11.13",
     "ioredis": "^5.6.1",
     "mongoose": "^8.3.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "qs": "^6.14.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -59,6 +64,7 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
