Feat: Add Redis caching support and update dependencies

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,12 @@ MONGO_DB_HOST=YOUR_MONGO_DB_HOST
 MONGO_DB_PORT=YOUR_MONGO_DB_PORT
 MONGO_DB_NAME=YOUR_MONGO_DB_NAME
 
+# Redis
+REDIS_HOST=#
+REDIS_PORT=#
+REDIS_PASSWORD=#
+CACHE_TTL=#
+CACHE_MAX=#
 
 # s3
 S3_BUCKET_NAME=YOUR_BUCKET_NAME
