--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.787.0",
-    "@keyv/redis": "^4.2.0",
-    "@nestjs/cache-manager": "^3.0.0",
+    "@keyv/redis": "^4.4.0",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
@@ -40,13 +40,15 @@
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/websockets": "^11.1.3",
     "bcrypt": "^5.1.1",
-    "cache-manager": "^6.4.0",
-    "cacheable": "^1.8.8",
+    "cache-manager": "^7.0.0",
+    "cache-manager-ioredis": "^2.1.0",
+    "cacheable": "^1.10.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.13",
     "ioredis": "^5.6.1",
+    "keyv": "^5.3.4",
     "mongoose": "^8.3.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -60,6 +62,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cache-manager-ioredis": "^2.0.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
