Feat: Add JWT expiration configuration and integrate throttling support

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,9 @@ PORT=3030
 
 # Jwt
 JWT_SECRET_KEY=YOUR_SECRET_KEY
+JWT_SECRET_EXPIRE_IN=YOUR_SECRET_EXPIRE_IN
 JWT_REFRESH_SECRET_KEY=YOUR_REFRESH_SECRET_KEY
+JWT_REFRESH_SECRET_EXPIRE_IN=YOUR_REFRESH_SECRET_EXPIRE_IN
 
 # Database Url
 MONGO_DB_USERNAME=YOUR_MONGO_DB_USERNAME
