--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^11.1.3",
     "@nestjs/swagger": "^7.3.1",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^11.1.3",
     "bcrypt": "^5.1.1",
     "cache-manager": "^7.0.0",
