--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^11.1.3",
+    "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^11.1.3",
